camera streaming bugfix
